# Algorithms

Calka/: CMakeLists.txt  main.cpp
CalkaRownolegle/: CMakeLists.txt  main.cpp
CalkaRownolegleReduction/: CMakeLists.txt  main.cpp
FordFulkerson/: CMakeLists.txt  FordFulkersonList.cpp  FordFulkersonList.h  FordFulkersonListv2.cpp  FordFulkersonListv2.h  FordFulkersonMatrix.cpp  FordFulkersonMatrix.h  adjacencyList.txt  adjacencyMatrix.txt  main.cpp
Kodowanie/: CMakeLists.txt  codingTable.txt  decode.cpp  main.cpp  mickiewicz.txt  test.txt  witcher.txt  witcherDecoded.txt  witcherEncoded.txt
Lab4/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp
MergeSort/: CMakeLists.txt  main.cpp
Punkty/: CMakeLists.txt  main.cpp
PunktyRownolegle/: CMakeLists.txt  main.cpp
Sort/: CMakeLists.txt  main.cpp
